--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "test": "clear && node_modules/.bin/mocha tests/**/*.spec.js --color --check-leaks --bail"
+    "test": "clear && node_modules/.bin/mocha tests/*.spec.js --color --check-leaks --throw-deprecation --trace-deprecation --reporter dot --bail"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.0.2"
+    "mocha": "^5.0.4"
   },
   "dependencies": {
     "big-integer": "^1.6.26",
