--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "mocha": "^5.0.4"
   },
   "dependencies": {
-    "big-integer": "^1.6.26",
+    "isobject": "^3.0.1",
     "moment": "^2.21.0",
-    "underscore": "^1.8.3"
+    "promise-mysql": "^3.2.1",
+    "sqlstring": "^2.3.1"
   }
 }
