--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mocha": "^5.0.4"
   },
   "dependencies": {
+    "filter-values": "^0.4.1",
     "isobject": "^3.0.1",
     "moment": "^2.21.0",
     "promise-mysql": "^3.2.1",
