--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "filter-values": "^0.4.1",
     "isobject": "^3.0.1",
     "moment": "^2.21.0",
+    "pluralize": "^7.0.0",
     "promise-mysql": "^3.2.1",
     "sqlstring": "^2.3.1"
   }
